# Get-the-best-daily-repositories

./: CURRENT_DATE  README.md
Projects/cloned_repos/Date 2024-10-29 21s 27m 41s/simplemind/: .envrc.template  .gitignore  CHANGELOG.md  README.md  pyproject.toml
Projects/cloned_repos/Date 2024-10-29 21s 27m 41s/simplemind/examples/: _context.py  contextual_memory.py  custom_temperature.py  generate_data.py  generate_text.py  math_plugin.py  sentiment_analysis.py  simple_memory.py  translate_text.py
Projects/cloned_repos/Date 2024-10-29 21s 27m 41s/simplemind/simplemind/: __init__.py  models.py  settings.py  utils.py
Projects/cloned_repos/Date 2024-11-06 21s 27m 51s/ComfyUI_OmniGen_Wrapper/: README.md  README_CN.md  __init__.py  pyproject.toml  requirements.txt
Projects/cloned_repos/Date 2024-11-06 21s 27m 51s/ComfyUI_OmniGen_Wrapper/py/: omnigen.py
Projects/cloned_repos/Date 2024-11-09 21s 27m 51s/rust-fn-dsa/: Cargo.toml  README.md
Projects/cloned_repos/Date 2024-11-09 21s 27m 51s/rust-fn-dsa/fn-dsa/: Cargo.toml
Projects/cloned_repos/Date 2024-11-09 21s 27m 51s/rust-fn-dsa/fn-dsa-comm/: Cargo.toml
Projects/cloned_repos/Date 2024-11-09 21s 27m 51s/rust-fn-dsa/fn-dsa-kgen/: Cargo.toml
Projects/cloned_repos/Date 2024-11-09 21s 27m 51s/rust-fn-dsa/fn-dsa-sign/: Cargo.toml
Projects/cloned_repos/Date 2024-11-09 21s 27m 51s/rust-fn-dsa/fn-dsa-vrfy/: Cargo.toml
Projects/cloned_repos/Date 2024-11-14 21s 27m 53s/textual/: .gitignore  LICENSE  README.md  pyproject.toml
Projects/cloned_repos/Date 2024-11-14 21s 27m 53s/textual/docs/: requirements.txt
Projects/cloned_repos/Date 2024-11-14 21s 27m 53s/textual/tonic_textual/: generator_utils.py  markdown_utils.py  parse_api.py  redact_api.py
Projects/cloned_repos/Date 2024-11-25 21s 28m 11s/nio/: .gitignore  Cargo.toml  README.md
Projects/cloned_repos/Date 2024-11-25 21s 28m 11s/nio/.cargo/: config.toml
Projects/cloned_repos/Date 2024-11-25 21s 28m 11s/nio/benchmarks/: Cargo.toml  README.md  rt_multi_threaded.rs  spawn.rs  sync_broadcast.rs  sync_mpsc.rs  sync_mpsc_oneshot.rs  sync_notify.rs  sync_rwlock.rs  sync_semaphore.rs  sync_watch.rs
Projects/cloned_repos/Date 2024-11-25 21s 28m 11s/nio/example/: Cargo.toml  README.md  basic.rs  chat.rs  echo-udp.rs  echo.rs  hello_world.rs  print_each_packet.rs  proxy.rs  tinydb.rs  tinyhttp.rs  udp-client.rs
Projects/cloned_repos/Date 2024-11-25 21s 28m 11s/nio/macros/: Cargo.toml
Projects/cloned_repos/Date 2024-11-25 21s 28m 11s/nio/src/: blocking.rs  future.rs  lib.rs
Projects/cloned_repos/Date 2024-11-25 21s 28m 11s/nio/tests/: README.md  _require_full.rs  async_send_sync.rs  buffered.rs  coop_budget.rs  duplex_stream.rs  fs.rs  fs_canonicalize_dir.rs  fs_copy.rs  fs_dir.rs  fs_file.rs  fs_link.rs  fs_open_options.rs  fs_open_options_windows.rs  fs_remove_dir_all.rs  fs_remove_file.rs  fs_rename.rs  fs_symlink_dir_windows.rs  fs_symlink_file_windows.rs  fs_try_exists.rs  io_async_fd.rs  io_buf_reader.rs  io_buf_writer.rs  io_chain.rs  io_copy.rs  io_copy_bidirectional.rs  io_fill_buf.rs  io_lines.rs  io_mem_stream.rs  io_panic.rs  io_read.rs  io_read_buf.rs  io_read_exact.rs  io_read_line.rs  io_read_to_end.rs  io_read_to_string.rs  io_read_until.rs  io_repeat.rs  io_sink.rs  io_take.rs  (+31 more)
Projects/cloned_repos/Date 2024-11-26 21s 28m 18s/NauEditorPublic/: .enginehash  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
Projects/cloned_repos/Date 2024-11-26 21s 28m 18s/NauEditorPublic/documents/: code-style.md
Projects/cloned_repos/Date 2024-11-26 21s 28m 18s/NauEditorPublic/editor/: CMakeLists.txt
Projects/cloned_repos/Date 2024-11-26 21s 28m 18s/NauEditorPublic/installer/: CMakeLists.txt  installer.py  requirements.txt
Projects/cloned_repos/Date 2024-11-29 21s 27m 53s/vk_minimal_latest/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
Projects/cloned_repos/Date 2024-12-04 21s 28m 43s/vekos/: Cargo.toml  README.md  x86_64-vekos.json
Projects/cloned_repos/Date 2024-12-27 21s 26m 59s/migrate-to-uv/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml  zizmor.yml
Projects/cloned_repos/Date 2024-12-30 21s 27m 23s/sceneri-common/: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Projects/cloned_repos/Date 2025-01-05 21s 26m 50s/prime/: .gitignore  Dockerfile  Makefile  README.md  e2b.Dockerfile  e2b.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py
Projects/cloned_repos/Date 2025-01-06 21s 27m 34s/rllm/: Cargo.toml  README.md
Projects/cloned_repos/Date 2025-01-07 21s 27m 46s/RustPotato/: Cargo.toml  README.md
Projects/cloned_repos/Date 2025-01-27 21s 28m 36s/orange-intelligence/: .flake8  .gitignore  Contributing.md  README.md  app.py  config.py  makefile  pyproject.toml
Projects/cloned_repos/Date 2025-01-28 21s 27m 06s/open-thoughts/: .gitignore  Makefile  README.md  pyproject.toml
Projects/cloned_repos/Date 2025-02-02 21s 26m 32s/moonlight-launcher/: .gitignore  Cargo.toml  README.md  build.rs
Projects/cloned_repos/Date 2025-02-13 21s 27m 12s/eclipse/: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
Projects/cloned_repos/Date 2025-02-13 21s 27m 12s/eclipse-handlers/: README.md  pyproject.toml
Projects/cloned_repos/Date 2025-02-20 21s 27m 37s/NativeSparseAttention/: README.md  pyproject.toml
Projects/cloned_repos/Date 2025-03-05 21s 28m 54s/primjs/: .gn  .habitat  BUILD.gn  CMakeLists.txt  DEPS  Gemfile  NOTICE  PrimJS.podspec  Primjs.gni  config.gni
Projects/cloned_repos/Date 2025-03-14 21s 29m 48s/mcpr/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
Projects/cloned_repos/Date 2025-03-15 21s 27m 59s/rust-stakeholder/: Cargo.toml  Dockerfile  LICENSE  README.md
Projects/cloned_repos/Date 2025-03-18 21s 28m 04s/kiss-slam/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
(+11507 files in other folders)
