[project]
name = "simplemind"
version = "0.1.2"
description = "An experimental client for AI providers that intends to replace LangChain and LangGraph for most common use cases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic", "pydantic-settings", "instructor", "openai", "anthropic", "ollama", "groq"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
