[tool.poetry]
name = "tonic-textual"
version = "3.0.0"
description = "Wrappers around the Tonic Textual API"
authors = ["Adam Kamor <adam@tonic.ai>", "Joe Ferrara <joeferrara@tonic.ai>", "Ander Steele <ander@tonic.ai>", "Ethan Philpott <ephilpott@tonic.ai>", "Lyon Van Voorhis <lyon@tonic.ai>", "Kirill Medvedev <kirill@tonic.ai>", "Travis Matthews <travis@tonic.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.tonic.ai/"
keywords = ["tonic.ai", "tonic", "tonic textual"]

classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
more-itertools = "^8.6.0"
tqdm = "^4.0.0"
amplitude-analytics = "^1.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
