[package]
name = "vekos"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = { version = "0.14.12", features = ["instructions"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
uart_16550 = "0.2.0"
array-init = "2.0.0"
sha2 = { version = "0.10.7", default-features = false, features = ["force-soft"] }
digest = { version = "0.10.7", default-features = false }
blake3 = { version = "1.5", default-features = false, features = ["pure"] }
rs_merkle = { version = "1.4", default-features = false }

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
