[package]
name = "rllm"
version = "0.1.4"
edition = "2021"
description = "A Rust library unifying multiple LLM backends"
license = "MIT"
authors = ["Tristan Granier <graniet75@gmail.com>"]
repository = "https://github.com/graniet/rllm"
documentation = "https://docs.rs/rllm"
homepage = "https://github.com/graniet/rllm"

[features]
default = []
openai = []
anthropic = []
ollama = []
deepseek = []
xai = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"

[dev-dependencies]
