[package]
name = "rust-stakeholder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
console = "0.15.11"
crossterm = "0.28.1"
ctrlc = "3.4.5"
indicatif = "0.17.11"
lazy_static = "1.5.0"
rand = "0.9.0"
ratatui = "0.29.0"
