[package]
name = "fn-dsa-vrfy"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fn-dsa-comm = { version = "0.1", path = "../fn-dsa-comm" }

[dev-dependencies]
hex.workspace = true
