[package]
name = "fn-dsa"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fn-dsa-comm = { version = "0.1", path = "../fn-dsa-comm" }
fn-dsa-kgen = { version = "0.1", path = "../fn-dsa-kgen" }
fn-dsa-sign = { version = "0.1", path = "../fn-dsa-sign" }
fn-dsa-vrfy = { version = "0.1", path = "../fn-dsa-vrfy" }

[dev-dependencies]
hex.workspace = true

[[bench]]
name = "keygen"
path = "benches/keygen.rs"
harness = false

[[bench]]
name = "sign"
path = "benches/sign.rs"
harness = false

[[bench]]
name = "verify"
path = "benches/verify.rs"
harness = false
