[package]
name = "benchmarks"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[features]
test-util = ["tokio/test-util"]
tokio = []

[dependencies]
tokio = { version = "1", features = ["full"] }
nio = { path = "../" }
criterion = "0.5.1"
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }

[[bench]]
name = "rt_multi_threaded"
path = "rt_multi_threaded.rs"
harness = false

[[bench]]
name = "spawn"
path = "spawn.rs"
harness = false

[[bench]]
name = "sync_broadcast"
path = "sync_broadcast.rs"
harness = false

[[bench]]
name = "sync_mpsc_oneshot"
path = "sync_mpsc_oneshot.rs"
harness = false

[[bench]]
name = "sync_mpsc"
path = "sync_mpsc.rs"
harness = false

[[bench]]
name = "sync_notify"
path = "sync_notify.rs"
harness = false

[[bench]]
name = "sync_rwlock"
path = "sync_rwlock.rs"
harness = false

[[bench]]
name = "sync_semaphore"
path = "sync_semaphore.rs"
harness = false

[[bench]]
name = "sync_watch"
path = "sync_watch.rs"
harness = false

# [[bench]]
# name = "time_now"
# path = "time_now.rs"
# harness = false

# [[bench]]
# name = "time_timeout"
# path = "time_timeout.rs"
# harness = false